# agentcli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.ko.md  README.md  pyproject.toml  repairman.adapter.yaml
.claude/: settings.json
.claude/skills/fix-issue/: SKILL.md
.claude/skills/fix-issue/references/: stages.md
.claude/skills/release-check/: SKILL.md
.claude/skills/sync-i18n/: SKILL.md
.claude/skills/triad-review/: SKILL.md
.claude/skills/triad-review/references/: agentcli-rules.md  phases.md  reviewers.md
.github/workflows/: ci.yml  release.yml
agentcli/: __init__.py  client.py  profile.py  types.py  utils.py
agentcli/providers/: _acp.py  base.py  claude.py  codex.py  copilot.py  kiro.py  registry.py
agentcli/store/: base.py  memory.py  sqlite.py
docs/: positioning.ko.md  positioning.md  release.ko.md  release.md  termux-setup.ko.md  termux-setup.md
docs/releases/: v0.4.0.ko.md  v0.4.0.md  v0.4.1.ko.md  v0.4.1.md  v0.4.2.ko.md  v0.4.2.md  v0.4.3.ko.md  v0.4.3.md  v0.5.0.ko.md  v0.5.0.md  v0.5.1.ko.md  v0.5.1.md  v0.6.0.ko.md  v0.6.0.md  v0.6.1.ko.md  v0.6.1.md  v0.6.2.ko.md  v0.6.2.md  v0.6.3.ko.md  v0.6.3.md  v0.6.4.ko.md  v0.6.4.md
docs/superpowers/plans/: 2026-06-20-kiro-acp-provider.md
docs/superpowers/specs/: 2026-06-20-kiro-acp-provider-design.md
examples/: 01_quickstart.py  02_multi_agent_parallel.py  03_streaming.py  04_profile_registry.py  05_review_system.py  06_pinned_context.py
scripts/: agentcli_ps.py
tests/: _acp_helpers.py  _stream_helpers.py  conftest.py  test_acp_connection.py  test_agentcli_ps.py  test_alias.py  test_async_streaming.py  test_capabilities.py  test_claude_provider.py  test_client.py  test_codex_provider.py  test_concurrency.py  test_context_session.py  test_context_sharing.py  test_copilot_coverage.py  test_copilot_provider.py  test_core_coverage.py  test_debug_helpers.py  test_dispatch_stream_event.py  test_fallback_switching.py  test_init.py  test_issue_4.py  test_kiro_coverage.py  test_kiro_provider.py  test_memory_store.py  test_process_group.py  test_process_teardown.py  test_profile.py  test_profile_coverage.py  test_provider_base.py  test_provider_normalization.py  test_provider_options.py  test_registry.py  test_session_lifecycle.py  test_session_routing.py  test_sqlite_coverage.py  test_sqlite_store.py  test_store_base.py  test_stream_template.py  test_types.py  (+2 more)
