[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcli-py"
version = "0.6.2"
description = "Lightweight session-aware Python API for Claude Code, Codex, and GitHub Copilot CLI."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "saintiron", email = "saintiron82@gmail.com" },
]
keywords = [
    "claude-code", "codex", "copilot", "agentic-cli",
    "llm", "ai-agent", "multi-agent", "subprocess", "streaming",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/saintiron82/agentcli"
Repository = "https://github.com/saintiron82/agentcli"
Issues = "https://github.com/saintiron82/agentcli/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentcli"]

[tool.hatch.build.targets.sdist]
include = [
    "agentcli/",
    "tests/",
    "examples/",
    "docs/",
    "README.md",
    "README.ko.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
